scaffold out site

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,9 @@
   <link rel="apple-touch-icon" href="/assets/icon/icon.png">
   <link rel="icon" type="image/x-icon" href="/assets/icon/favicon.ico">
   <link rel="manifest" href="/manifest.json">
+
+  <link href="https://fonts.googleapis.com/css?family=Fira+Mono|Roboto:400,400i,700" rel="stylesheet">
+
 </head>
 <body>
 
