--- a/src/index.html
+++ b/src/index.html
@@ -2,19 +2,19 @@
 <html dir="ltr" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Stencil Starter App</title>
-  <meta name="Description" content="Welcome to the Stencil App Starter. You can use this starter to build entire apps all with web components using Stencil!">
+  <title>S'more | Gooey GUI Goodness</title>
+  <meta name="Description" content="S'more is a modular web component library full of micro-interactions and UX utilities">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
-  <meta name="theme-color" content="#16161d">
+  <meta name="theme-color" content="#000000">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta http-equiv="x-ua-compatible" content="IE=Edge"/>
 
   <link href="/build/app.css" rel="stylesheet">
   <script src="/build/app.js"></script>
 
-  <link rel="apple-touch-icon" href="/assets/icon/icon.png">
+  <!-- <link rel="apple-touch-icon" href="/assets/icon/icon.png"> -->
   <link rel="icon" type="image/x-icon" href="/assets/icon/favicon.ico">
-  <link rel="manifest" href="/manifest.json">
+  <!-- <link rel="manifest" href="/manifest.json"> -->
 
   <link href="https://fonts.googleapis.com/css?family=Fira+Mono|Roboto:400,400i,700" rel="stylesheet">
 
