update docs layout

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   <link rel="icon" type="image/x-icon" href="/assets/icon/favicon.ico">
   <!-- <link rel="manifest" href="/manifest.json"> -->
 
-  <link href="https://fonts.googleapis.com/css?family=Fira+Mono|Roboto:400,400i,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Chewy|Fira+Mono|Roboto:400,400i,700" rel="stylesheet">
 
 </head>
 <body>
